Fix layout of main so there's space around it instead of sticking to borders of body or overflowing out of bound

--- a/solutions/javascript-fundamentals/07. time-tracking-dashboard/style.css
+++ b/solutions/javascript-fundamentals/07. time-tracking-dashboard/style.css
@@ -18,7 +18,7 @@
     --PaleBlue: hsl(236, 100%, 87%);
 }
 
-/* ============= Body/General styles =============== */
+/* ============= Body & Main =============== */
 *, *::before, *::after {
     margin: 0;
     padding: 0;
@@ -26,23 +26,33 @@
 }
 
 body, html {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin-block: 2rem;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
     background-color: var(--VeryDarkBlue);
     color: var(--PaleBlue);
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
     font-size: 16px;
+    gap: 2rem;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 2rem;
-    max-height: 100vh;
+    padding-inline: 1rem;
+}
+
+/* ============= Utility classes =============== */
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
 
 .container {
